<resources>
    <string name="app_name">FetalLite</string>
    <string name="version">1.6</string>
    <string name="label_system_sync">System Sync In Progress</string>
    <string name="label_probe_tab_func">Probe and Tablet Functions</string>
    <string name="label_device_conn">Device Connectivity</string>
    <string name="label_setup_software">Setting-up Software</string>
    <string name="label_printer">Printer</string>
    <string name="label_battery">Battery</string>
    <string name="label_tab_battery_low">Tablet battery low.  Please charge to continue using.Minimum battery required : 20% </string>
    <string name="label_type_tab_battery_low">Battery Low</string>
    <string name="label_sensor_battery_low">Sensor Unit battery low.  Please charge to continue using.Minimum battery required : 20% </string>
    <string name="label_type_sensor_battery_low">Battery Low</string>
    <string name="label_tab_sens_battery_low">Tablet/Sensor Unit battery low.  Please charge to continue using.Minimum battery required : 20% </string>
    <string name="label_type_tab_sens_battery_low">Battery Low</string>
    <string name="label_invalid_device_id">Invalid Device ID</string>
    <string name="error_deviceID_empty">Please enter device ID</string>
    <string name="device_registration_failed">Device Registration Failed</string>
    <string name="label_registration"><b>REGISTRATION</b></string>
    <string name="label_registration_help">Please fill in the below details to complete registration and begin installation</string>
    <string name="label_Security_question">Security Question</string>
    <string name="prompt_login_id">Admin Id<sup>*</sup></string>
    <string name="prompt_password">Password<sup>*</sup> <i> (Min 6 characters) </i> </string>
    <string name="prompt_confirm_password">Confirm Password<sup>*</sup></string>
    <string name="prompt_Admin_First_Name">First Name<sup>*</sup></string>
    <string name="prompt_Admin_Last_Name">Last Name<sup>*</sup></string>
    <string name="prompt_phone_number">Phone Number<sup>*</sup></string>
    <string name="prompt_email">E-mail Address<sup>*</sup></string>
    <string name="error_invalid_data">Invalid Details</string>
    <string name="error_login_id_required">Admin Id is required</string>
    <string name="error_login_id_invalid">Invalid Admin Id</string>
    <string name="error_admin_name_required">Admin Name is required</string>
    <string name="error_admin_name_invalid">Invalid Admin Name</string>
    <string name="error_question_required">Security Question is required</string>
    <string name="error_answer_required">Answer is required</string>
    <string name="error_password_required">Password should be of minimum %1$d characters</string>
    <string name="error_password_min_length">Password should be of minimum %1$d characters</string>
    <string name="error_confirm_password_required">Password and Confirm Password do not match</string>
    <string name="error_confirm_password_min_length">Password and Confirm Password do not match</string>
    <string name="error_password_mismatch">Password and Confirm Password do not match</string>
    <string name="error_invalid_email">Invalid e-mail Address</string>
    <string name="success_registration">REGISTRATION COMPLETE </string>
    <string name="error_phone_length"> Invalid phone number </string>
    <string name="success_thank_you">Thank you for registering!</string>
    <string name="action_setup_admin_dash">Setup Admin Dashboard</string>
    <string name="prompt_question">Question <sup>*</sup>(in case forgot password)</string>
    <string name="prompt_answer">Answer <sup>*</sup></string>
    <string name="admin_forgot_password">Admin Forgot Password</string>
    <string name="label_device_registration">DEVICE REGISTRATION</string>
    <string name="success_device_registration">DEVICE REGISTRATION SUCCESSFUL </string>
    <string name="success_turn_off_device">Please turn off the sensor unit</string>
    <string name="label_admin_dashboard">ADMIN DASHBOARD</string>
    <string name="label_hospital_dashboard">HOSPITAL SETTINGS</string>
    <string name="action_go_to_tutorials">Next</string>
    <string name="label_login_id">Admin Id</string>
    <string name="label_password">Password</string>
    <string name="label_dummy_password">******</string>
    <string name="label_phone">Phone</string>
    <string name="label_email">E-mail</string>
    <string name="label_address">Address</string>
    <string name="label_add_hospital">HOSPITAL INFORMATION</string>
    <string name="label_register_hospital">HOSPITAL REGISTRATION</string>
    <string name="label_add_hospital_dashboard">ADD HOSPITAL</string>
    <string name="error_no_user_doctor">Please add at least one user and one doctor for each hospital to proceed.</string>
    <string name="error_no_user_doctor_enabled">Please add and enable at least one user and one doctor for each hospital to proceed.</string>
    <string name="error_no_hospital">Please add at least one hospital to proceed.</string>
    <string name="admin_tag">This will be used incase you forget your admin password</string>
    <string name="complete_update">UPDATE COMPLETE</string>
    <string name="label_kiosk">KIOSK MODE</string>
    <string name="confim_kiosk_start">Do you want to start Kiosk Mode?</string>
    <string name="confim_kiosk_stop">Do you want to stop Kiosk Mode?</string>
    <string name="label_admin_login_as_user">Allow admin to login to conduct test?*</string>
    <string name="tag_label_admin_login_as_user"> By choosing YES the admin will be able to login to conduct tests and view all patient data</string>
    <string name="label_admin_register_as_doctor">Register admin as doctor?*</string>
    <string name="tag_label_admin_register_as_doctor">By choosing YES the admin may get patient related alerts on their registered phone number</string>
    <string name="tag_admin_details_edit"> All admin details can be edited from Menu</string>
    <string name="label_do_not_reset">DO NOT RESET</string>
    <string name="error_donot_reset"> Please do not reset the Admin as either User/Doctor, as there is only one User/Doctor</string>
    <string name="label_disable_admin"> CONFIRM ACTION </string>
    <string name="string_admin"> Do you want to change Admin credentials </string>
    <string name="label_edit_admin_details">ADMIN INFORMATION</string>
    <string name="label_edit_details">Enter Admin Details</string>
    <string name="prompt_admin_id">Admin ID</string>
    <string name="prompt_admin_email">Email</string>
    <string name="prompt_admin_phone_numer">Phone Number</string>
    <string name="prompt_admin_old_password">Old Password <i>min 6 characters</i></string>
    <string name="prompt_admin_new_password">New Password <i>min 6 characters</i></string>
    <string name="prompt_admin_confirm_password">Confirm Password <i>min 6 characters</i></string>
    <string name="change_password">Change Password</string>
    <string name="complete_admin_update">Admin details has been updated successfully </string>
    <string name="error_old_password_required">Old password does not match</string>
    <string name="label_enter_hospital_details">Enter Hospital Details</string>
    <string name="label_edit_hospital">HOSPITAL INFORMATION</string>
    <string name="prompt_hospital_name">Hospital Name<sup>*</sup></string>
    <string name="hospital_tag"> <i>You may add more hospitals and edit existing hospital details by later by going to <b> Hospital Settings</b> in the Menu</i></string>
    <string name="prompt_address">Address<sup>*</sup></string>
    <string name="error_hospital_name_required">Hospital Name is required</string>
    <string name="error_phone_number_required">Phone Number is required</string>
    <string name="error_address_required">Address is required</string>
    <string name="error_email_required">Invalid E-mail Address</string>
    <string name="error_fname">Invalid First Name</string>
    <string name="error_lname">Invalid Surname</string>
    <string name="success_hospital_add">Hospital has been added successfully</string>
    <string name="success_hospital_edit">Hospital has been updated successfully</string>
    <string name="error_hospital_name_exists">Hospital Exists</string>
    <string name="label_add_user">USER INFORMATION</string>
    <string name="label_edit_user">USER INFORMATION</string>
    <string name="label_enter_new_user_details">Enter User Details</string>
    <string name="prompt_username">User ID<sup>*</sup></string>
    <string name="error_userid_required">User ID is required</string>
    <string name="error_userid_invalid">Invalid User ID</string>
    <string name="error_user_fname_required">First name is required</string>
    <string name="error_user_lname_required">Surname is required</string>
    <string name="prompt_user_phone_number">Phone Number</string>
    <string name="prompt_user_email">E-mail Address</string>
    <string name="error_username_exists">User ID already exists. Please try again with some other username.</string>
    <string name="success_user_add">User has been added successfully</string>
    <string name="success_user_edit">User has been updated successfully</string>
    <string name="label_disable_user">DISABLE USER</string>
    <string name="label_disable_user_confirm">Do you want to disable %1$s?</string>
    <string name="label_enable_user">ENABLE USER</string>
    <string name="label_enable_user_confirm">Do you want to enable %1$s?</string>
    <string name="label_doctor_info">DOCTOR INFORMATION</string>
    <string name="label_add_doctor">DOCTOR INFORMATION</string>
    <string name="label_edit_doctor">DOCTOR INFORMATION</string>
    <string name="label_enter_doctor_details">Enter Doctor\'s Details</string>
    <string name="prompt_name">Name<sup>*</sup></string>
    <string name="prompt_fname">First Name<sup>*</sup></string>
    <string name="prompt_lname">Surname</string>
    <string name="error_name_doctor"> Doctor name is required.</string>
    <string name="success_doctor_add">Doctor has been added successfully</string>
    <string name="success_doctor_edit">Doctor has been updated successfully</string>
    <string name="error_doctor_name_exists">Doctor Name already exists</string>
    <string name="error_name">Invalid Name</string>
    <string name="label_disable_doctor">DISABLE DOCTOR</string>
    <string name="label_disable_doctor_confirm">Do you want  to disable %1$s?</string>
    <string name="label_enable_doctor">ENABLE DOCTOR</string>
    <string name="label_enable_doctor_confirm">Do you want to enable %1$s?</string>
    <string name="label_user_cred">Users</string>
    <string name="label_user_cred_cap">USER CREDENTIALS</string>
    <string name="label_doctor_dir">Doctor\'s Contact</string>
    <string name="label_delete_user_confirm">Are you sure you want to delete %1$s?</string>
    <string name="label_delete_hospital_confirm">All users and doctors will also be deleted with the hospital.\nAre you sure you want to delete %1$s?</string>
    <string name="label_tutorials">TUTORIALS.. USER GUIDE</string>
    <string name="action_contact_care">Contact Customer Care</string>
    <string name="label_video_tutorials">VIDEO TUTORIALS</string>
    <string name="action_play_all">Play All</string>
    <string name="label_user_guide">USER GUIDE</string>
    <string name="label_login_page">User LogIn Page</string>
    <string name="action_forgot_password">Forgot Password</string>
    <string name="label_forgot_password">Please ask admin to reset password</string>
    <string name="action_login">Login</string>
    <string name="error_invalid_credentials">Invalid credentials entered. Please check the ID/Password and try again</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
</resources>