<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d_16"
        android:orientation="vertical">

        <TextView
            style="@style/text_14_black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_enter_hospital_details" />

        <TextView
            style="@style/text_12_grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hospital_tag" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilHospitalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/d_6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etHospitalName"
                style="@style/edit_16_bg_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:hint="@string/prompt_hospital_name"
                android:inputType="textPersonName"
                android:padding="@dimen/d_6" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/d_6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPhoneNumber"
                style="@style/edit_16_bg_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:hint="@string/prompt_phone_number"
                android:inputType="phone"
                android:imeOptions="flagNoExtractUi"
                android:padding="@dimen/d_4" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/d_6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/edit_16_bg_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/d_4" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/d_6">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAddress"
                style="@style/edit_16_bg_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagNoExtractUi"
                android:hint="@string/prompt_address"
                android:padding="@dimen/d_4" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bCancel"
                style="@style/button_14_primary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_cancel"
                android:visibility="gone" />

            <View
                android:layout_width="@dimen/d_4"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/bNext"
                style="@style/button_14_primary"
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:text="Finish" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>